--- a/_config.yml
+++ b/_config.yml
@@ -56,3 +56,6 @@ kramdown:
 
 gems: ['jekyll-paginate']
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
+
+
+excerpt_separator: '<!--end-preview-->'
