Update team info

--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,16 @@ team:
   - 
     name: 'Guillermo Castilla Mejías'
     position: 'Designer'
-    email: gcastillam@piperift.com
+    email: guillecastillam@gmail.com
+    linkedin: guillermo-castilla-mejias-8b3246b3
   -
     name: 'Miguel Coronado García'
     position: '3D Artist'
+    email: migueldel89@gmail.com
   - 
     name: 'Martin Barbudo'
     position: 'Concept Artist'
+    email: MartinMBarbudo@gmail.com
     twitter: MartinBarbudo
   - 
     name: 'Antonio Serón Molina'
