Better author info

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,16 @@
 url: https://piperift.com
 
 # Site settings
-title: Piperift
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: PipeRift
+description: 'An small game development studio.'
+url: 'https://piperift.com'
+baseurl: '/'
+google_analytics: 'UA-27762240-2'
+#disqus_shortname: 'piperift'
 
+author:
+  name: 'PipeRift'
+  email: info@piperift.com
 
 # Team names, titles and social links
 people:
