Improved Layouts, added content and better style

--- a/_config.yml
+++ b/_config.yml
@@ -18,44 +18,23 @@ people:
   position: Founder
   social:
     - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: linkedin
-      url: #
-
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+      url: https://twitter.com/
+    - title: github
+      url: https://github.com/muit
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
     url: http://twitter.com/piperift
+  - title: itch-io
+    url: https://piperift.itch.io
   - title: github
     url: http://github.com/piperift
 
 # Postal address (add as many lines as necessary)
 address:
   - line: Tres Cantos, Madrid, 28760
+
 
 # Build settings
 permalink: /:year/:title/
