Preparing editor structure

--- a/Config/ui.ini
+++ b/Config/ui.ini
@@ -33,14 +33,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Example: Log]
-Pos=366,743
-Size=1554,274
+Pos=0,743
+Size=1368,274
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Log]
 Pos=0,703
-Size=1579,314
+Size=1530,314
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -61,20 +61,77 @@ Size=317,730
 Collapsed=0
 DockId=0x0000000E,0
 
+[Window][Dear ImGui Demo]
+Pos=1532,20
+Size=388,997
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][DockSpace Demo]
+Size=1920,1017
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=1010,51
+Size=561,954
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=839,111
+Size=430,450
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=498,440
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=773,154
+Size=350,560
+Collapsed=0
+
+[Window][Lettuce]
+Pos=0,20
+Size=1368,681
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Eggplant]
+Pos=0,20
+Size=1368,681
+Collapsed=0
+DockId=0x0000000B,2
+
+[Window][Carrot]
+Pos=0,20
+Size=1368,681
+Collapsed=0
+DockId=0x0000000B,1
+
+[Window][Class]
+Pos=0,20
+Size=1530,681
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace           ID=0xD23B6B5F Pos=0,42 Size=1920,998 Split=X
-  DockNode          ID=0x00000009 Parent=0xD23B6B5F SizeRef=1579,997 Split=X
-    DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=351,997 Split=Y
-      DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=240,873 Split=Y SelectedTab=0xAB92E61E
-        DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=261,269 Split=Y SelectedTab=0xA99A06B3
-          DockNode  ID=0x0000000D Parent=0x00000005 SizeRef=295,265 SelectedTab=0xA99A06B3
-          DockNode  ID=0x0000000E Parent=0x00000005 SizeRef=295,730 SelectedTab=0xBD9B3216
-        DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=261,716 SelectedTab=0xAB92E61E
-      DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=240,122 SelectedTab=0xEDC13103
-    DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=1226,997 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=1554,721 Split=Y
-        DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=1133,681 CentralNode=1
-        DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=1133,314 SelectedTab=0xB7722E25
-      DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=1554,274 SelectedTab=0xBF126D42
-  DockNode          ID=0x0000000A Parent=0xD23B6B5F SizeRef=339,997 SelectedTab=0x080FC883
+DockSpace             ID=0x99E7F7DF Window=0x2C8A369B Pos=8,91 Size=1514,625 CentralNode=1
+DockSpace             ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=X
+  DockNode            ID=0x0000000F Parent=0xD23B6B5F SizeRef=1530,997 Split=X
+    DockNode          ID=0x00000009 Parent=0x0000000F SizeRef=1579,997 Split=X
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=351,997 Split=Y
+        DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=240,873 Split=Y
+          DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=261,269 Split=Y
+            DockNode  ID=0x0000000D Parent=0x00000005 SizeRef=295,265
+            DockNode  ID=0x0000000E Parent=0x00000005 SizeRef=295,730
+          DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=261,716
+        DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=240,122
+      DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=1226,997 Split=Y
+        DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=1554,721 Split=Y
+          DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=1133,681 CentralNode=1 Selected=0x2C8A369B
+          DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=1133,314 Selected=0xB7722E25
+        DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=1554,274 Selected=0xBF126D42
+    DockNode          ID=0x0000000A Parent=0x0000000F SizeRef=339,997
+  DockNode            ID=0x00000010 Parent=0xD23B6B5F SizeRef=388,997 Selected=0xE927CF2F
 
