Added Editor structure and dockspace layers

--- a/Config/ui.ini
+++ b/Config/ui.ini
@@ -1,3 +1,10 @@
+[Window][Log]
+Pos=0,823
+Size=1650,194
+Collapsed=0
+DockId=0x00000004,0
+ClassId=0x00000001
+
 [Window][EditorLayoutWindow]
 Pos=0,0
 Size=1920,1017
@@ -8,130 +15,93 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][ImGui Demo]
-Pos=1581,19
-Size=339,998
+[Window][Class]
+Pos=0,20
+Size=1920,801
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000002,0
 
-[Window][###Details]
-Pos=0,294
-Size=351,723
+[Window][A]
+Pos=8,68
+Size=150,941
+Collapsed=0
+DockId=0x4CEB0230,0
+
+[Window][B]
+Pos=287,100
+Size=150,387
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1652,20
+Size=268,997
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Entities]
-Pos=0,20
-Size=351,272
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][Memory]
-Pos=0,895
-Size=364,122
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Example: Log]
-Pos=0,743
-Size=1368,274
+[Window][Function]
+Pos=300,68
+Size=1342,745
 Collapsed=0
 DockId=0x00000008,0
-
-[Window][Log]
-Pos=0,703
-Size=1530,314
-Collapsed=0
-DockId=0x0000000C,0
-
-[Window][Singletons]
-Pos=1581,20
-Size=339,997
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][ImGui Metrics]
-Pos=1273,34
-Size=281,235
-Collapsed=0
+ClassId=0x00000002
 
 [Window][Details]
-Pos=0,287
-Size=317,730
+Pos=8,68
+Size=290,745
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000007,0
+ClassId=0x00000002
 
-[Window][Dear ImGui Demo]
-Pos=1532,20
-Size=388,997
+[Window][Function Graph]
+Pos=247,68
+Size=1087,745
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000C,0
+ClassId=0x00000002
 
-[Window][DockSpace Demo]
-Size=1920,1017
-Collapsed=0
-
-[Window][Example: Documents]
-Pos=1010,51
-Size=561,954
-Collapsed=0
-
-[Window][Example: Property editor]
-Pos=839,111
-Size=430,450
-Collapsed=0
-
-[Window][Example: Simple layout]
-Pos=60,60
-Size=498,440
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=773,154
-Size=350,560
-Collapsed=0
-
-[Window][Lettuce]
-Pos=0,20
-Size=1368,681
+[Window][Variables]
+Pos=8,68
+Size=237,745
 Collapsed=0
 DockId=0x0000000B,0
+ClassId=0x00000002
 
-[Window][Eggplant]
-Pos=0,20
-Size=1368,681
+[Window][Functions]
+Pos=1336,68
+Size=306,376
 Collapsed=0
-DockId=0x0000000B,2
+DockId=0x00000011,0
+ClassId=0x00000002
 
-[Window][Carrot]
-Pos=0,20
-Size=1368,681
+[Window][Local Variables]
+Pos=1336,446
+Size=306,367
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x00000012,0
+ClassId=0x00000002
 
-[Window][Class]
+[Window][Unit.cv]
 Pos=0,20
-Size=1530,681
+Size=1650,801
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace             ID=0x99E7F7DF Window=0x2C8A369B Pos=8,91 Size=1514,625 CentralNode=1
-DockSpace             ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=X
-  DockNode            ID=0x0000000F Parent=0xD23B6B5F SizeRef=1530,997 Split=X
-    DockNode          ID=0x00000009 Parent=0x0000000F SizeRef=1579,997 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=351,997 Split=Y
-        DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=240,873 Split=Y
-          DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=261,269 Split=Y
-            DockNode  ID=0x0000000D Parent=0x00000005 SizeRef=295,265
-            DockNode  ID=0x0000000E Parent=0x00000005 SizeRef=295,730
-          DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=261,716
-        DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=240,122
-      DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=1226,997 Split=Y
-        DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=1554,721 Split=Y
-          DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=1133,681 CentralNode=1 Selected=0x2C8A369B
-          DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=1133,314 Selected=0xB7722E25
-        DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=1554,274 Selected=0xBF126D42
-    DockNode          ID=0x0000000A Parent=0x0000000F SizeRef=339,997
-  DockNode            ID=0x00000010 Parent=0xD23B6B5F SizeRef=388,997 Selected=0xE927CF2F
+DockSpace       ID=0x4CEB0230 Pos=8,91 Size=1904,745 Split=X Selected=0x33D8746B
+  DockNode      ID=0x00000007 Parent=0x4CEB0230 SizeRef=290,745 Selected=0xBD9B3216
+  DockNode      ID=0x00000008 Parent=0x4CEB0230 SizeRef=1342,745 CentralNode=1 Selected=0x13640A79
+DockSpace       ID=0xA83EFFB1 Window=0x6B65D234 Pos=8,91 Size=1634,745 Split=X
+  DockNode      ID=0x0000000F Parent=0xA83EFFB1 SizeRef=1545,166 Split=X
+    DockNode    ID=0x0000000B Parent=0x0000000F SizeRef=237,166 Selected=0x0A3AFFB2
+    DockNode    ID=0x0000000C Parent=0x0000000F SizeRef=1665,166 CentralNode=1 Selected=0x13640A79
+  DockNode      ID=0x00000010 Parent=0xA83EFFB1 SizeRef=357,166 Split=Y Selected=0xC15DAFAF
+    DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=357,83 Selected=0xC15DAFAF
+    DockNode    ID=0x00000012 Parent=0x00000010 SizeRef=357,81 Selected=0x7BFA9065
+DockSpace       ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=X
+  DockNode      ID=0x00000005 Parent=0xD23B6B5F SizeRef=1650,997 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1920,801 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=383,1017
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1535,1017 CentralNode=1 Selected=0x6B65D234
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1920,194 Selected=0xB7722E25
+  DockNode      ID=0x00000006 Parent=0xD23B6B5F SizeRef=268,997 Selected=0xE927CF2F
 
