Improved code layouts

--- a/Config/ui.ini
+++ b/Config/ui.ini
@@ -1,9 +1,53 @@
 [Window][Log]
-Pos=0,823
-Size=1650,194
+Pos=0,814
+Size=1920,203
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 ClassId=0x00000001
+
+[Window][Asset Browser]
+Collapsed=0
+DockId=0x00000002
+
+[Window][Start Page]
+Pos=0,20
+Size=1920,792
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Unit.cv]
+Pos=0,20
+Size=1920,792
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Variables]
+Pos=8,68
+Size=285,736
+Collapsed=0
+DockId=0x00000003,0
+ClassId=0x00000002
+
+[Window][Function Graph]
+Pos=295,68
+Size=1289,736
+Collapsed=0
+DockId=0x00000005
+ClassId=0x00000002
+
+[Window][Functions]
+Pos=1586,68
+Size=326,367
+Collapsed=0
+DockId=0x00000007,0
+ClassId=0x00000002
+
+[Window][Local Variables]
+Pos=1586,437
+Size=326,367
+Collapsed=0
+DockId=0x00000008,0
+ClassId=0x00000002
 
 [Window][EditorLayoutWindow]
 Pos=0,0
@@ -15,93 +59,20 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Class]
-Pos=0,20
-Size=1920,801
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][A]
-Pos=8,68
-Size=150,941
-Collapsed=0
-DockId=0x4CEB0230,0
-
-[Window][B]
-Pos=287,100
-Size=150,387
-Collapsed=0
-
 [Window][Dear ImGui Demo]
-Pos=1652,20
-Size=268,997
+Pos=522,193
+Size=550,680
 Collapsed=0
-DockId=0x00000006,0
-
-[Window][Function]
-Pos=300,68
-Size=1342,745
-Collapsed=0
-DockId=0x00000008,0
-ClassId=0x00000002
-
-[Window][Details]
-Pos=8,68
-Size=290,745
-Collapsed=0
-DockId=0x00000007,0
-ClassId=0x00000002
-
-[Window][Function Graph]
-Pos=247,68
-Size=1087,745
-Collapsed=0
-DockId=0x0000000C,0
-ClassId=0x00000002
-
-[Window][Variables]
-Pos=8,68
-Size=237,745
-Collapsed=0
-DockId=0x0000000B,0
-ClassId=0x00000002
-
-[Window][Functions]
-Pos=1336,68
-Size=306,376
-Collapsed=0
-DockId=0x00000011,0
-ClassId=0x00000002
-
-[Window][Local Variables]
-Pos=1336,446
-Size=306,367
-Collapsed=0
-DockId=0x00000012,0
-ClassId=0x00000002
-
-[Window][Unit.cv]
-Pos=0,20
-Size=1650,801
-Collapsed=0
-DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0x4CEB0230 Pos=8,91 Size=1904,745 Split=X Selected=0x33D8746B
-  DockNode      ID=0x00000007 Parent=0x4CEB0230 SizeRef=290,745 Selected=0xBD9B3216
-  DockNode      ID=0x00000008 Parent=0x4CEB0230 SizeRef=1342,745 CentralNode=1 Selected=0x13640A79
-DockSpace       ID=0xA83EFFB1 Window=0x6B65D234 Pos=8,91 Size=1634,745 Split=X
-  DockNode      ID=0x0000000F Parent=0xA83EFFB1 SizeRef=1545,166 Split=X
-    DockNode    ID=0x0000000B Parent=0x0000000F SizeRef=237,166 Selected=0x0A3AFFB2
-    DockNode    ID=0x0000000C Parent=0x0000000F SizeRef=1665,166 CentralNode=1 Selected=0x13640A79
-  DockNode      ID=0x00000010 Parent=0xA83EFFB1 SizeRef=357,166 Split=Y Selected=0xC15DAFAF
-    DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=357,83 Selected=0xC15DAFAF
-    DockNode    ID=0x00000012 Parent=0x00000010 SizeRef=357,81 Selected=0x7BFA9065
-DockSpace       ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=X
-  DockNode      ID=0x00000005 Parent=0xD23B6B5F SizeRef=1650,997 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1920,801 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=383,1017
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1535,1017 CentralNode=1 Selected=0x6B65D234
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1920,194 Selected=0xB7722E25
-  DockNode      ID=0x00000006 Parent=0xD23B6B5F SizeRef=268,997 Selected=0xE927CF2F
+DockSpace       ID=0xA83EFFB1 Window=0x6B65D234 Pos=8,91 Size=1904,736 Split=X
+  DockNode      ID=0x00000003 Parent=0xA83EFFB1 SizeRef=287,792 Selected=0x0A3AFFB2
+  DockNode      ID=0x00000004 Parent=0xA83EFFB1 SizeRef=1631,792 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1303,792 CentralNode=1 HiddenTabBar=1 Selected=0x13640A79
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=326,792 Split=Y
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=326,395 Selected=0xC15DAFAF
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=326,395 Selected=0x7BFA9065
+DockSpace       ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=Y
+  DockNode      ID=0x00000001 Parent=0xD23B6B5F SizeRef=1920,812 CentralNode=1 Selected=0x6B65D234
+  DockNode      ID=0x00000002 Parent=0xD23B6B5F SizeRef=1920,203 Selected=0xB7722E25
 
