--- a/Config/ui.ini
+++ b/Config/ui.ini
@@ -23,9 +23,16 @@ DockId=0x00000001,1
 
 [Window][Variables]
 Pos=8,68
-Size=285,736
+Size=285,220
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
+ClassId=0x00000002
+
+[Window][Functions]
+Pos=8,290
+Size=285,514
+Collapsed=0
+DockId=0x00000008,0
 ClassId=0x00000002
 
 [Window][Function Graph]
@@ -35,18 +42,11 @@ Collapsed=0
 DockId=0x00000005
 ClassId=0x00000002
 
-[Window][Functions]
+[Window][Function Details]
 Pos=1586,68
-Size=326,367
+Size=326,736
 Collapsed=0
-DockId=0x00000007,0
-ClassId=0x00000002
-
-[Window][Local Variables]
-Pos=1586,437
-Size=326,367
-Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006
 ClassId=0x00000002
 
 [Window][EditorLayoutWindow]
@@ -60,19 +60,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=522,193
+Pos=968,97
 Size=550,680
 Collapsed=0
 
+[Window][Style Editor]
+Pos=267,109
+Size=357,894
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0xA83EFFB1 Window=0x6B65D234 Pos=8,91 Size=1904,736 Split=X
-  DockNode      ID=0x00000003 Parent=0xA83EFFB1 SizeRef=287,792 Selected=0x0A3AFFB2
-  DockNode      ID=0x00000004 Parent=0xA83EFFB1 SizeRef=1631,792 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1303,792 CentralNode=1 HiddenTabBar=1 Selected=0x13640A79
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=326,792 Split=Y
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=326,395 Selected=0xC15DAFAF
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=326,395 Selected=0x7BFA9065
-DockSpace       ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=Y
-  DockNode      ID=0x00000001 Parent=0xD23B6B5F SizeRef=1920,812 CentralNode=1 Selected=0x6B65D234
-  DockNode      ID=0x00000002 Parent=0xD23B6B5F SizeRef=1920,203 Selected=0xB7722E25
+DockSpace     ID=0xA83EFFB1 Window=0x6B65D234 Pos=8,91 Size=1904,736 Split=X
+  DockNode    ID=0x00000003 Parent=0xA83EFFB1 SizeRef=287,792 Split=Y
+    DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=287,220 Selected=0x0A3AFFB2
+    DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=287,514 Selected=0xC15DAFAF
+  DockNode    ID=0x00000004 Parent=0xA83EFFB1 SizeRef=1631,792 Split=X
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1303,792 CentralNode=1 HiddenTabBar=1 Selected=0x13640A79
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=326,792 HiddenTabBar=1 Selected=0x31E94496
+DockSpace     ID=0xD23B6B5F Window=0xBDD205A7 Pos=0,43 Size=1920,997 Split=Y
+  DockNode    ID=0x00000001 Parent=0xD23B6B5F SizeRef=1920,812 CentralNode=1 Selected=0x6B65D234
+  DockNode    ID=0x00000002 Parent=0xD23B6B5F SizeRef=1920,203 Selected=0xB7722E25
 
