--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "External/Tracy"]
-	path = External/Tracy
+[submodule "Extern/Tracy"]
+	path = Extern/Tracy
 	url = https://github.com/wolfpld/tracy.git
