--- a/Libs/Core/CMakeLists.txt
+++ b/Libs/Core/CMakeLists.txt
@@ -7,11 +7,8 @@ target_compile_features(Core PUBLIC cxx_std_17)
 target_define_platform(Core)
 
 conan_cmake_run(REQUIRES eastl/3.16.05 BASIC_SETUP CMAKE_TARGETS BUILD missing)
-target_link_libraries(Core CONAN_PKG::eastl)
 
-if(BUILD_PROFILER)
-    target_link_libraries(Core PUBLIC Tracy)
-endif()
+target_link_libraries(Core PUBLIC CONAN_PKG::eastl Tracy GLM)
 
 install(TARGETS Core
     EXPORT VCLangTargets
