--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -6,6 +6,7 @@ set_target_properties(Editor PROPERTIES OUTPUT_NAME "VCLang_Editor")
 target_include_directories(Editor PUBLIC Include)
 target_compile_features(Editor PUBLIC cxx_std_17)
 target_link_libraries(Editor PUBLIC ${PROJECT_NAME} CONAN_PKG::imgui)
+target_define_platform(Editor)
 
 target_shared_output_directory(Editor)
 
