--- a/Libs/Framework/CMakeLists.txt
+++ b/Libs/Framework/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(${PROJECT_NAME} STATIC Src/Framework.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC Include)
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 target_link_libraries(${PROJECT_NAME} PUBLIC Core)
+target_define_platform(${PROJECT_NAME})
 
 target_shared_output_directory(${PROJECT_NAME})
 
