--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
-    }
+        "xutility": "cpp",
+        "string_view": "cpp",
+        "xmemory0": "cpp"
+    },
+    "clang-format.executable": ""
 }
