--- a/Apps/CLI/CMakeLists.txt
+++ b/Apps/CLI/CMakeLists.txt
@@ -4,6 +4,7 @@ set_target_properties(CLI PROPERTIES OUTPUT_NAME "VCLang_CLI")
 target_include_directories(CLI PUBLIC Include)
 target_compile_features(CLI PUBLIC cxx_std_17)
 target_link_libraries(CLI PUBLIC ${PROJECT_NAME})
+target_define_platform(CLI)
 
 target_shared_output_directory(CLI)
 
