--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ conan_cmake_run(
         nlohmann_json/3.8.0
         date/2.4.1
         imgui/1.76
+        fmt/6.2.1
     BASIC_SETUP CMAKE_TARGETS BUILD missing OUTPUT_QUIET
 )
 
