--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -34,6 +34,9 @@ jobs:
             cc: gcc
 
     steps:
+    - name: Install Conan
+      run: pip install conan
+
     - uses: actions/checkout@v2
     
     - uses: lukka/get-cmake@latest
