[CI] Keep pip cache

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -31,6 +31,16 @@ jobs:
         python-version: [3.6]
 
     steps:
+    - name: Get pip cache dir
+      id: pip-cache
+      run: echo "::set-output name=dir::$(pip cache dir)"
+    - name: Pip Cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.pip-cache.outputs.dir }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+
     - name: Install Conan
       run: pip install conan
 
@@ -55,4 +65,5 @@ jobs:
         cmakeListsOrSettingsJson: CMakeListsTxt
         cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
         cmakeAppendedArgs: '-GNinja -DCMAKE_BUILD_TYPE=Release'
+        buildWithCMakeArgs: '-- -v'
         buildDirectory: '${{ github.workspace }}/Build/'
