Improved String helpers

--- a/Libs/Core/CMakeLists.txt
+++ b/Libs/Core/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB_RECURSE CORE_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 
 add_library(Core STATIC ${CORE_SOURCE_FILES})
 target_include_directories(Core PUBLIC Include)
-target_compile_features(Core PUBLIC cxx_std_17)
+set_property(TARGET Core PROPERTY CXX_STANDARD 17)
 target_define_platform(Core)
 
 target_link_libraries(Core PUBLIC
