--- a/Libs/Framework/CMakeLists.txt
+++ b/Libs/Framework/CMakeLists.txt
@@ -6,7 +6,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC Include)
 file(GLOB_RECURSE FRAMEWORK_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 target_sources(${PROJECT_NAME} PRIVATE ${FRAMEWORK_SOURCE_FILES})
 
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 target_link_libraries(${PROJECT_NAME} PUBLIC Core)
 target_define_platform(${PROJECT_NAME})
 
