--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_executable(Editor Src/main.cpp)
 set_target_properties(Editor PROPERTIES OUTPUT_NAME "VCLang_Editor")
 target_include_directories(Editor PUBLIC Include)
-target_compile_features(Editor PUBLIC cxx_std_17)
+set_property(TARGET Editor PROPERTY CXX_STANDARD 17)
 target_link_libraries(Editor PUBLIC ${PROJECT_NAME} CONAN_PKG::imgui)
 target_define_platform(Editor)
 
