--- a/Libs/Core/CMakeLists.txt
+++ b/Libs/Core/CMakeLists.txt
@@ -8,11 +8,11 @@ target_define_platform(Core)
 
 target_link_libraries(Core PUBLIC
     CONAN_PKG::eastl
-    CONAN_PKG::glm
     CONAN_PKG::spdlog
     CONAN_PKG::nlohmann_json
     CONAN_PKG::date
     CONAN_PKG::fmt
+    glm
     Tracy
     tsl::robin_map
     tsl::sparse_map
