--- a/Libs/Core/CMakeLists.txt
+++ b/Libs/Core/CMakeLists.txt
@@ -11,8 +11,8 @@ target_link_libraries(Core PUBLIC
     CONAN_PKG::spdlog
     CONAN_PKG::nlohmann_json
     CONAN_PKG::date
-    CONAN_PKG::fmt
     glm
+    fmt
     Tracy
     tsl::robin_map
     tsl::sparse_map
