--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,5 +95,6 @@
         "variant": "cpp",
         "format": "cpp"
     },
-    "clang-format.executable": ""
+    "clang-format.executable": "",
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
