[CI] Splitted workflows by platform

--- a/.github/workflows/macos-ci.yml
+++ b/.github/workflows/macos-ci.yml
@@ -1,25 +1,17 @@
-name: C++ CI
+name: MacOS CI
 
 on: [push, pull_request]
 
 jobs:
   job:
-    name: ${{ matrix.os }} Build
+    name: Build
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        name: [windows-msvc, ubuntu-clang, macos-clang]
+        name: [macos-clang]
         # For Windows msvc, for Linux and macOS let's use the clang compiler.
         include:
-          - name: windows-msvc
-            os: windows-latest
-            cxx: cl.exe
-            cc: cl.exe
-          - name: ubuntu-clang
-            os: ubuntu-latest
-            cxx: clang++
-            cc: clang
           - name: macos-clang
             os: macos-latest
             cxx: clang++
@@ -51,16 +43,14 @@ jobs:
 
     - name: Init Submodules
       uses: snickerbockers/submodules-init@v4
-    
+
     - uses: lukka/get-cmake@latest
-    
-    - uses: ilammy/msvc-dev-cmd@v1
-    
+
     - uses: lukka/set-shell-env@v1
       with:
         CXX: ${{ matrix.cxx }}
         CC: ${{ matrix.cc }}
-    
+
     - name: Configure and Build
       uses: lukka/run-cmake@v2
       with:
